apps/private/redisinsight/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redisinsight
  labels:
    kubernetes.io/metadata.name: redisinsight
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
