apps/private/redisinsight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: redisinsight
spec:
  selector:
    app: redisinsight
  ports:
    - port: 5540
      targetPort: 5540
