apps/private/redisinsight/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redisinsight
  namespace: redisinsight
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`redis.chenar.space`)
      kind: Rule
      middlewares:
        - name: private-access
          namespace: traefik
      services:
        - name: redisinsight
          port: 5540
  tls:
    certResolver: letsencrypt-prod
